# fedimovies

./: .dockerignore  .editorconfig  .env  .gitignore  .woodpecker.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEDERATION.md  README.md  config.yaml.example  docker-compose.yaml  justfile
.cargo/: config.toml
contracts/: Collectible.json  IAdapter.json  IGate.json  IMinter.json  ISubscription.json  ISubscriptionAdapter.json  Manager.json  MembershipToken.json  Minter.json
contrib/: Caddyfile  Dockerfile  debian_control_file  mitra-alt-fe.nginx  mitra.nginx  mitra.service  mitra_config.yaml
contrib/debian/: changelog  control  install  postinst  postinst.ex  rules
contrib/monero/: wallet.conf
docs/: ethereum.md  ipfs.md  mitractl.md  monero.md  onion.md  openapi.yaml
fedimovies-cli/: Cargo.toml
fedimovies-cli/src/: cli.rs  main.rs
fedimovies-config/: Cargo.toml
fedimovies-config/src/: config.rs  federation.rs  lib.rs  limits.rs  loader.rs  registration.rs
fedimovies-models/: Cargo.toml
fedimovies-models/migrations/: V0005__media_attachment__add_ipfs_cid.sql  V0009__post_reaction.sql  V0013__post__add_repost_fields.sql  V0014__post_tag.sql  V0017__actor_profile__increase_display_name_length.sql  V0018__relationship__add_id.sql  V0020__subscription.sql  V0025__actor_profile__add_updated_at.sql  V0026__actor_profile__add_payment_options.sql  V0030__invoice.sql  V0036__follow_request__add_activity_id.sql  V0038__actor_profile__image_json.sql  V0041__user_account__user_role.sql  V0047__internal_property.sql  V0052__post__object_id_length.sql  schema.sql
fedimovies-models/src/: cleanup.rs
fedimovies-models/src/attachments/: queries.rs  types.rs
fedimovies-models/src/database/: int_enum.rs  mod.rs  test_utils.rs
fedimovies-models/src/emojis/: queries.rs  types.rs
fedimovies-models/src/instances/: queries.rs
fedimovies-models/src/invoices/: queries.rs  types.rs
fedimovies-models/src/notifications/: queries.rs
fedimovies-models/src/oauth/: queries.rs
fedimovies-models/src/posts/: helpers.rs  queries.rs  types.rs
fedimovies-models/src/profiles/: mod.rs  queries.rs  types.rs
fedimovies-models/src/properties/: queries.rs
fedimovies-models/src/reactions/: queries.rs
fedimovies-models/src/relationships/: queries.rs  types.rs
fedimovies-models/src/subscriptions/: queries.rs  types.rs
fedimovies-models/src/users/: mod.rs  queries.rs  types.rs  utils.rs
fedimovies-utils/: Cargo.toml
fedimovies-utils/src/: caip2.rs  crypto_rsa.rs  currencies.rs  datetime.rs  did_pkh.rs  files.rs  lib.rs  multibase.rs  passwords.rs  urls.rs
migrations/: V0003__post__add_in_reply_to.sql  V0007__post__add_object_id.sql  V0010__timeline_marker.sql  V0012__post__add_visibility.sql  V0015__post_reaction__add_activity_id.sql  V0019__relationship__add_relationship_type.sql  V0022__actor_profile__add_actor_id.sql  V0023__actor_profile__add_identity_proofs.sql  V0024__post__add_updated_at.sql  V0039__emoji.sql  V0042__oauth_application.sql  V0043__oauth_authorization.sql  V0044__user_invite_code__add_note_and_created_at.sql  V0045__profile_emoji.sql  V0046__actor_profile__add_emoji.sql  V0049__actor_profile__add_manually_approves_followers.sql  V0050__actor_profile__add_aliases.sql  schema.sql
mitra-cli/: Cargo.toml
mitra-cli/src/: cli.rs  main.rs
mitra-config/: Cargo.toml
mitra-config/src/: blockchain.rs  config.rs  environment.rs  federation.rs  lib.rs  limits.rs  loader.rs  registration.rs
mitra-models/: Cargo.toml
mitra-models/migrations/: V0001__create_tables.sql  V0002__actor_profile__add_extra_fields.sql  V0004__post__add_reply_count.sql  V0006__oauth_token.sql  V0008__notification.sql  V0011__mention.sql  V0016__user_account__nullable_wallet_address.sql  V0021__user_account__nullable_password_hash.sql  V0027__post_link.sql  V0028__actor_profile__clear_payment_options.sql  V0029__subscription__add_chain_id.sql  V0031__subscription__sender_address_nullable.sql  V0032__actor_profile__add_subscriber_count.sql  V0033__invoice__add_amount.sql  V0034__actor_profile__add_hostname.sql  V0035__background_job.sql  V0037__actor_profile__add_unreachable_since.sql  V0040__media_attachment__add_file_size.sql  V0048__actor_profile__identity_proof_type_number.sql  V0051__relationship__source_id_target_id_not_equal.sql  V0053__user_account__client_config.sql  V0054__post__add_is_sensitive.sql  schema.sql
mitra-models/src/: cleanup.rs  lib.rs
mitra-utils/: Cargo.toml
mitra-utils/src/: canonicalization.rs  crypto_rsa.rs  did.rs  did_key.rs  did_pkh.rs  files.rs  html.rs  markdown.rs  multibase.rs  passwords.rs  random.rs  urls.rs
scripts/: build_deb.sh
src/: cli.rs  config.rs  errors.rs  frontend.rs  http.rs  lib.rs  logger.rs  main.rs  media.rs  scheduler.rs
src/activitypub/: activity.rs  actor.rs  authentication.rs  collections.rs  constants.rs  deliverer.rs  fetcher.rs  http_client.rs  identifiers.rs  mod.rs  queues.rs  receiver.rs  types.rs  views.rs  vocabulary.rs
src/admin/: roles.rs
src/atom/: feeds.rs  mod.rs  views.rs
src/config/: blockchain.rs  environment.rs  limits.rs  loader.rs  main.rs  mod.rs  retention.rs
src/database/: int_enum.rs  json_macro.rs  migrate.rs  mod.rs  test_utils.rs
src/ethereum/: api.rs  contracts.rs  eip4361.rs  errors.rs  gate.rs  identity.rs  mod.rs  nft.rs  signatures.rs  subscriptions.rs  sync.rs  utils.rs
src/http_signatures/: create.rs  verify.rs
src/identity/: claims.rs  did.rs  did_key.rs  did_pkh.rs  minisign.rs  mod.rs  signatures.rs
src/ipfs/: mod.rs  posts.rs  store.rs  utils.rs
src/job_queue/: mod.rs  periodic_tasks.rs  scheduler.rs
src/json_signatures/: create.rs  mod.rs  proofs.rs  verify.rs
src/mastodon_api/: errors.rs  mod.rs  pagination.rs  uploads.rs
src/models/: cleanup.rs  mod.rs
src/monero/: helpers.rs  mod.rs  subscriptions.rs  wallet.rs
src/nodeinfo/: helpers.rs  mod.rs  types.rs  views.rs
src/tmdb/: service.rs
src/utils/: caip2.rs  crypto.rs  crypto_rsa.rs  currencies.rs  datetime.rs  files.rs  html.rs  id.rs  markdown.rs  mod.rs  passwords.rs  urls.rs
(+194 files in other folders)
