[package]
name = "mitra"
version = "1.20.0"
description = "Federated micro-blogging platform and content subscription service"
license = "AGPL-3.0"

edition = "2021"
rust-version = "1.56"
publish = false
default-run = "mitra"

[workspace]
members = [
  ".",
  "mitra-cli",
  "mitra-config",
  "mitra-models",
  "mitra-utils",
]
default-members = [
  ".",
  "mitra-cli",
  "mitra-config",
  "mitra-models",
  "mitra-utils",
]

[dependencies]
mitra-config = { path = "mitra-config" }
mitra-models = { path = "mitra-models" }
mitra-utils = { path = "mitra-utils" }

# Used to handle incoming HTTP requests
actix-cors = "0.6.2"
actix-files = "0.6.2"
actix-web = "4.1.0"
actix-web-httpauth = "0.8.0"
# Used for catching errors
anyhow = "1.0.58"
# Used for working with RSA keys, HTTP signatures and file uploads
base64 = "0.13.0"
# Used for working with dates
chrono = { version = "0.4.23", default-features = false, features = ["std", "serde"] }
# Used to work with hexadecimal strings
hex = { version = "0.4.3", features = ["serde"] }
# Used for logging
log = "0.4.14"
env_logger = { version = "0.9.0", default-features = false }
# Used to verify minisign signatures
ed25519-dalek = "1.0.1"
ed25519 = "1.5.3"
blake2 = "0.10.5"
# Used to determine the number of CPUs on the system
num_cpus = "1.13.0"
# Used for working with regular expressions
regex = "1.6.0"
# Used for making async HTTP requests
reqwest = { version = "0.11.13", features = ["json", "multipart", "socks"] }
# Used for working with RSA keys
rsa = "0.5.0"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used to calculate SHA2 hashes
sha2 = "0.9.5"
# Used to verify EIP-4361 signatures
siwe = "0.4.0"
# Used for creating error types
thiserror = "1.0.37"
# Async runtime
tokio = { version = "1.20.4", features = ["macros"] }
# Used to work with URLs
url = "2.2.2"
# Used to work with UUIDs
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dev-dependencies]
mitra-config = { path = "mitra-config", features = ["test-utils"] }
mitra-models = { path = "mitra-models", features = ["test-utils"] }
mitra-utils = { path = "mitra-utils", features = ["test-utils"] }

serial_test = "0.7.0"

[features]
production = ["mitra-config/production"]
