[package]
name = "mitra-cli"
version = "1.14.0"
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.56"

[[bin]]
name = "mitractl"
path = "src/main.rs"

[dependencies]
mitra-config = { path = "../mitra-config" }
mitra-utils = { path = "../mitra-utils" }
mitra = { path = ".." }

# Used for catching errors
anyhow = "1.0.58"
# Used to build admin CLI tool
clap = { version = "3.2.18", default-features = false, features = ["std", "derive"] }
# Used for logging
log = "0.4.14"
# Async runtime
tokio = { version = "1.17.0", features = ["macros"] }
# Used to work with UUIDs
uuid = "1.1.2"
