[package]
name = "mitra-utils"
version = "1.18.0"
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
# Used for HTML sanitization
ammonia = "3.2.0"
# Used for working with RSA keys, HTTP signatures and file uploads
base64 = "0.13.0"
# Used to decode base58btc
bs58 = "0.4.0"
# Used for working with dates
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
# Used for parsing markdown
comrak = { version = "0.15.0", default-features = false }
# Used to guess media type of a file
mime_guess = "2.0.3"
mime-sniffer = "0.1.2"
# Used to generate random numbers
rand = "0.8.4"
# Used for working with regular expressions
regex = "1.6.0"
# Used for working with RSA keys
rsa = "0.5.0"
pem = "1.0.2"
# Used for hashing passwords
rust-argon2 = "1.0.0"
# Used for serialization/deserialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.89"
# Used to create JCS representations
serde_jcs = "0.1.0"
# Used to calculate SHA2 hashes
sha2 = "0.9.5"
# Used for creating error types
thiserror = "1.0.37"
# Used to generate lexicographically sortable IDs
ulid = { version = "1.0.0", features = ["uuid"] }
# Used to work with URLs
url = "2.2.2"
# Used to work with UUIDs
uuid = "1.1.2"

[features]
test-utils = ["rand/small_rng"]
